--- a/index.html
+++ b/index.html
@@ -10,43 +10,49 @@
     <div class='content'>
 
         <div class='BeemoBody'>
-            <div class='BeemoFace'>
-                <span class='BeemoOlhos OlhoEsquerdo'></span>
-                <span class='BeemoOlhos OlhoDireito'></span>
 
-                <div class='BeemoBoca'>
-                    <span class='BeemoLabios BeemoLabioSuperior'></span>
-                    <span class='BeemoLabios BeemoLabioInferior'></span>
+            <div class='BeemoFrente'>
+                <div class='BeemoFace'>
+                    <div class="texto"></div>
+                    <span class='BeemoOlhos OlhoEsquerdo'></span>
+                    <span class='BeemoOlhos OlhoDireito'></span>
+
+                    <div class='BeemoBoca'>
+                        <span class='BeemoLabios BeemoLabioSuperior'></span>
+                        <span class='BeemoLabios BeemoLabioInferior'></span>
+                    </div>
                 </div>
+
+                <div class='BeemoDiscoContainer'>
+                    <span class='BeemoDisco'></span>
+                    <button class='BeemoBotaoDisco'></button>
+                </div>
+
+                <div class='BeemoSetas'>
+                    <span class='setas setaCima'></span>
+                    <span class='setas setaBaixo'></span>
+                    <span class='setas setaEsquerda'></span>
+                    <span class='setas setaDireita'></span>
+                    <span class='setaCentro'></span>
+                </div>
+
+                <div class='BeemoPlugs'>
+                    <span class='BeemoPlug'></span>
+                    <span class='BeemoPlug'></span>
+                </div>
+
+                <div class='BeemoBotoes'>
+                    <button class='botaoVermelho'></button>
+                    <button class='botaoVerde'></button>
+                    <div class="botaoAzul"></div>
+                    <span class='bordaBotaoTriangulo bordaEsquerda'></span>
+                    <span class='bordaBotaoTriangulo bordaDireita'></span>
+                    <span class='bordaBotaoTriangulo bordaBaixo'></span>
+                </div>
+
             </div>
 
-            <div class='BeemoDiscoContainer'>
-                <span class='BeemoDisco'></span>
-                <button class='BeemoBotaoDisco'></button>
-            </div>
-
-            <div class='BeemoSetas'>
-                <span class='setas setaCima'></span>
-                <span class='setas setaBaixo'></span>
-                <span class='setas setaEsquerda'></span>
-                <span class='setas setaDireita'></span>
-                <span class='setaCentro'></span>
-            </div>
-
-            <div class='BeemoPlugs'>
-                <span class='BeemoPlug'></span>
-                <span class='BeemoPlug'></span>
-            </div>
-
-            <div class='BeemoBotoes'>
-                <button class='botaoVermelho'></button>
-                <button class='botaoVerde'></button>
-                <div class="botaoAzul"></div>
-                <span class='bordaBotaoTriangulo bordaEsquerda'></span>
-                <span class='bordaBotaoTriangulo bordaDireita'></span>
-                <span class='bordaBotaoTriangulo bordaBaixo'></span>
-            </div>
-
+            
         </div>
 
     </div>
