--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
 
                 <div class='BeemoSetas'>
-                    <span class='setas setaCima'></span>
+                    <span class='setas setaCima' onclick="levantaTela()"></span>
                     <span class='setas setaBaixo'></span>
                     <span class='setas setaEsquerda'></span>
                     <span class='setas setaDireita'></span>
